<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="8dp"

            android:fontFamily="@font/suez_one"
            android:textColor="@color/black"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="8dp"

            android:fontFamily="@font/suez_one"
            android:textColor="@color/black"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvScore"
            app:layout_constraintEnd_toStartOf="@id/tvTimer" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="8dp"

            android:fontFamily="@font/suez_one"
            android:textColor="@color/black"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.ivanz851.minesweeper.MineSweeperView
            android:id="@+id/mineSweeperView"
            android:layout_width="wrap_content"
            android:layout_height="300pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvScore"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <Button
                android:id="@+id/btn_to_main_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"

                android:backgroundTint="@color/btn_standard_color"

                android:fontFamily="@font/suez_one"
                android:text="Back to main menu"
                android:textSize="15sp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
